--- a/haskell/haskellInDepth/haskellInDepth.cabal
+++ b/haskell/haskellInDepth/haskellInDepth.cabal
@@ -1,4 +1,4 @@
-cabal-version: 1.12
+cabal-version: 2.0
 
 -- This file has been generated from package.yaml by hpack version 0.35.0.
 --
@@ -25,14 +25,13 @@ source-repository head
 
 library
   exposed-modules:
-      Chapter1
-      Chapter2
-      Radar
       Utils
   other-modules:
       Paths_haskellInDepth
+  autogen-modules:
+      Paths_haskellInDepth
   hs-source-dirs:
-      ./app
+      ./lib
   default-extensions:
       DeriveFoldable
       DeriveFunctor
@@ -53,78 +52,17 @@ library
     , transformers
   default-language: Haskell2010
 
-executable main
-  main-is: main.hs
-  other-modules:
-      Utils
+library hid-lib
+  exposed-modules:
       Chapter1
       Chapter2
       Radar
-  hs-source-dirs:
-      ./app/
-  default-extensions:
-      DeriveFoldable
-      DeriveFunctor
-      DeriveTraversable
-      DeriveGeneric
-      DeriveDataTypeable
-      ExplicitForAll
-      ScopedTypeVariables
-      StandaloneDeriving
-      TypeApplications
-      TypeSynonymInstances
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
-  build-depends:
-      base >=4.7 && <5
-    , bytestring
-    , fmt
-    , mtl
-    , text
-    , transformers
-  default-language: Haskell2010
-
-executable stockquotes
-  main-is: main.hs
   other-modules:
-      QuoteData
-  hs-source-dirs:
-      app/stockquotes/
-  default-extensions:
-      DeriveFoldable
-      DeriveFunctor
-      DeriveTraversable
-      DeriveGeneric
-      DeriveDataTypeable
-      ExplicitForAll
-      ScopedTypeVariables
-      StandaloneDeriving
-      TypeApplications
-      TypeSynonymInstances
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.7 && <5
-    , blaze-colonnade >=1.1 && <1.3
-    , blaze-html ==0.9.*
-    , bytestring >=0.10 && <0.12
-    , cassava ==0.5.*
-    , colonnade >=1.1 && <1.3
-    , fmt
-    , mtl
-    , optparse-applicative >=0.14 && <0.17
-    , text
-    , time >=1.8 && <1.12
-    , transformers
-    , vector
-  default-language: Haskell2010
-
-test-suite main-test
-  type: exitcode-stdio-1.0
-  main-is: main.hs
-  other-modules:
-      Chapter2Test
+      Paths_haskellInDepth
+  autogen-modules:
       Paths_haskellInDepth
   hs-source-dirs:
-      ./test/
+      ./src/main
   default-extensions:
       DeriveFoldable
       DeriveFunctor
@@ -141,6 +79,111 @@ test-suite main-test
       base >=4.7 && <5
     , fmt
     , haskellInDepth
+    , mtl
+    , text
+    , transformers
+  default-language: Haskell2010
+
+executable main
+  main-is: main.hs
+  other-modules:
+      Chapter1
+      Chapter2
+      Radar
+  hs-source-dirs:
+      ./src/main
+  default-extensions:
+      DeriveFoldable
+      DeriveFunctor
+      DeriveTraversable
+      DeriveGeneric
+      DeriveDataTypeable
+      ExplicitForAll
+      ScopedTypeVariables
+      StandaloneDeriving
+      TypeApplications
+      TypeSynonymInstances
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
+  build-depends:
+      base >=4.7 && <5
+    , bytestring
+    , fmt
+    , haskellInDepth
+    , mtl
+    , text
+    , transformers
+  default-language: Haskell2010
+
+executable stockquotes
+  main-is: Main.hs
+  other-modules:
+      QuoteData
+      Params
+      StatReport
+      HtmlReport
+      Charts
+  hs-source-dirs:
+      src/stockquotes/
+  default-extensions:
+      DeriveFoldable
+      DeriveFunctor
+      DeriveTraversable
+      DeriveGeneric
+      DeriveDataTypeable
+      ExplicitForAll
+      ScopedTypeVariables
+      StandaloneDeriving
+      TypeApplications
+      TypeSynonymInstances
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      Chart >=1.8 && <1.10
+    , Chart-cairo >=1.8 && <1.10
+    , Chart-diagrams >=1.8 && <1.10
+    , base >=4.7 && <5
+    , blaze-colonnade >=1.1 && <1.3
+    , blaze-html ==0.9.*
+    , bytestring >=0.10 && <0.12
+    , cassava ==0.5.*
+    , colonnade >=1.1 && <1.3
+    , filepath
+    , fmt
+    , haskellInDepth
+    , mtl
+    , optparse-applicative >=0.14 && <0.17
+    , text
+    , time >=1.8 && <1.12
+    , transformers
+    , vector
+  default-language: Haskell2010
+
+test-suite main-test
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  other-modules:
+      Chapter2Test
+      Paths_haskellInDepth
+  autogen-modules:
+      Paths_haskellInDepth
+  hs-source-dirs:
+      ./test/main
+  default-extensions:
+      DeriveFoldable
+      DeriveFunctor
+      DeriveTraversable
+      DeriveGeneric
+      DeriveDataTypeable
+      ExplicitForAll
+      ScopedTypeVariables
+      StandaloneDeriving
+      TypeApplications
+      TypeSynonymInstances
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
+  build-depends:
+      base >=4.7 && <5
+    , fmt
+    , haskellInDepth
+    , hid-lib
     , mtl
     , random
     , text
