--- a/haskell/haskellInDepth/package.yaml
+++ b/haskell/haskellInDepth/package.yaml
@@ -50,60 +50,67 @@ default-extensions:
 - TypeSynonymInstances
 
 library:
-  source-dirs: ./app
+  source-dirs: ./lib
 
 executables:
   main:
     main:               main.hs
-    source-dirs:        ./app/
-    # exposed-modules:
+    source-dirs:        ./src/main
     other-modules:
-    - Utils
     - Chapter1
     - Chapter2
     - Radar
     dependencies: 
+    - haskellInDepth
     - bytestring
     - text
     - fmt
 
   stockquotes:
-    main:                main.hs
-    source-dirs:         app/stockquotes/
+    main:                Main.hs
+    source-dirs:         src/stockquotes/
     other-modules:
       - QuoteData
+      - Params
+      - StatReport
+      - HtmlReport
+      - Charts
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - haskellInDepth
     - vector
     - bytestring >=0.10 && <0.12
     - blaze-html >=0.9 && <0.10
     - optparse-applicative >=0.14 && <0.17
     - time >=1.8 && <1.12
-    # - Chart >=1.8 && <1.10
-    # - Chart-diagrams >=1.8 && <1.10
+    - Chart >=1.8 && <1.10
+    - Chart-diagrams >=1.8 && <1.10
+    - Chart-cairo >=1.8 && <1.10
     - cassava >=0.5 && <0.6
     - colonnade >= 1.1 && < 1.3
     - blaze-colonnade >= 1.1 && < 1.3
+    - filepath
 
-# internal-libraries:
-#   hid-lib:
-#     source-dirs: ./app
-#     exposed-modules:
-#       - Utils
-#       - Chapter1
-#       - Chapter2
-#       - Radar
-#     dependencies: []
+internal-libraries:
+  hid-lib:
+    source-dirs: ./src/main
+    exposed-modules:
+      # - Utils
+      - Chapter1
+      - Chapter2
+      - Radar
+    dependencies: 
+      - haskellInDepth
 
 tests:
   main-test:
-    main:               main.hs
-    source-dirs:      ./test/
+    main:               Main.hs
+    source-dirs:      ./test/main
     dependencies: 
     - fmt
     - random
     - haskellInDepth
-    # - hid-lib
+    - hid-lib
