haskell: cleanup stockquotes

--- a/haskell/haskellInDepth/Makefile
+++ b/haskell/haskellInDepth/Makefile
@@ -37,7 +37,7 @@ run:  ## Run test
 	@echo 2 | stack exec -- $(MAINEXE_NAME) -r ./src/data/rotations1.txt North
 	@echo 2 | stack exec -- $(MAINEXE_NAME) -o ./src/data/directions1.txt 
 
-	@echo 2 | stack exec -- stockquotes ./src/data/quotes.csv --company "My Company" -H "./stockreport.html"
+	@echo 2 | stack exec -- stockquotes ./src/data/quotes.csv -n "My Company" -H "./stockreport.html"
 
 	@echo "Tests"
 	@stack test -- $(MAINTEST)
@@ -47,7 +47,7 @@ debug: ## Print variables
 
 clean: ## Clean
 	stack clean
-	rm -f *.hi *.o *.cabal
+	rm -f *.hi *.o *.cabal *.png *.svg *.html
 
 help: ## Display this help
 	@grep -E '^[0-9a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
