haskell: shunting yard algorithm

--- a/haskell/haskellInDepth/Makefile
+++ b/haskell/haskellInDepth/Makefile
@@ -36,8 +36,10 @@ run:  ## Run test
 	@echo "Chapter 2"
 	@echo 2 | stack exec -- $(MAINEXE_NAME) -r ./src/data/rotations1.txt North
 	@echo 2 | stack exec -- $(MAINEXE_NAME) -o ./src/data/directions1.txt 
-
 	@echo 2 | stack exec -- stockquotes ./src/data/quotes.csv -n "My Company" -H "./stockreport.html"
+
+	echo "Chapter 5"
+	@echo 3 | stack exec -- $(MAINEXE_NAME) 
 
 	@echo "Tests"
 	@stack test -- $(MAINTEST)
