--- a/haskell/haskellInDepth/haskellInDepth.cabal
+++ b/haskell/haskellInDepth/haskellInDepth.cabal
@@ -58,6 +58,9 @@ library hid-lib
       Chapter2
       Radar
   other-modules:
+      Chapter5
+      Chapter5Parser
+      Chapter5ParserTest
       Paths_haskellInDepth
   autogen-modules:
       Paths_haskellInDepth
@@ -80,6 +83,7 @@ library hid-lib
     , fmt
     , haskellInDepth
     , mtl
+    , random
     , text
     , transformers
   default-language: Haskell2010
@@ -89,6 +93,9 @@ executable main
   other-modules:
       Chapter1
       Chapter2
+      Chapter5
+      Chapter5Parser
+      Chapter5ParserTest
       Radar
   hs-source-dirs:
       ./src/main
@@ -110,6 +117,7 @@ executable main
     , fmt
     , haskellInDepth
     , mtl
+    , random
     , text
     , transformers
   default-language: Haskell2010
