--- a/haskell/haskellInDepth/package.yaml
+++ b/haskell/haskellInDepth/package.yaml
@@ -57,11 +57,12 @@ executables:
     main:               main.hs
     source-dirs:        ./src/main
     other-modules:
-    - Chapter1
-    - Chapter2
-    - Chapter5
-    - Chapter5Parser
-    - Chapter5ParserTest
+    - Chapter1_4
+    - Chapter2_1
+    - Chapter5_1_3
+    - Chapter5_2_1
+    - Chapter5_2_2_Parser
+    - Chapter5_3_1
     - Radar
     dependencies: 
     - haskellInDepth
@@ -103,8 +104,12 @@ internal-libraries:
     source-dirs: ./src/main
     exposed-modules:
       # - Utils
-      - Chapter1
-      - Chapter2
+      - Chapter1_4
+      - Chapter2_1
+      - Chapter5_1_3
+      - Chapter5_2_1
+      - Chapter5_2_2_Parser
+      - Chapter5_3_1
       - Radar
     dependencies: 
       - haskellInDepth
