--- a/haskell/haskellInDepth/hie.yaml
+++ b/haskell/haskellInDepth/hie.yaml
@@ -2,15 +2,13 @@ cradle:
   stack:
     - path: "./lib/"
       component: haskellInDepth:lib
-    - path: "./src/main"
+    - path: "./src/du/"
+      component: haskellInDepth:exe:du
+    - path: "./src/main/"
       component: haskellInDepth:exe:main
     - path: "./src/stockquotes"
       component: haskellInDepth:exe:stockquotes
-    - path: "./src/du"
-      component: haskellInDepth:exe:du
     - path: "./test/main"
       component: haskellInDepth:test:main-test
-    - path: "./src/main"
-      component: haskellInDepth:lib
     - path: "./test/du"
       component: haskellInDepth:test:du-test
